--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,142 @@
-/******************************** TAG SELECTORS ***************************/
-
 body {
-  background-color: #eaf6f6;
+  margin: 0;
+  text-align: center;
+  font-family: "Merriweather", serif;
 }
+.mob-no {
+  text-align: left;
+  margin-right: 80%;
+  width: 10%;
+}
+.phone-icon {
+  width: 20px;
+  height: 20px;
+  margin-top: 10px;
+}
+.top-container {
+  background-color: lightcyan;
+  position: relative;
+  padding-top: 100px;
+}
+h1 {
+  margin-top: 0;
+  margin: 0 auto;
+  font-family: "Sacramento", cursive;
+  font-size: 5.625em;
+  color: #66bfbf;
+}
+.pro {
+  text-decoration: underline;
+}
+.top-cloud {
+  position: absolute;
+  bottom: 300px;
+  left: 250px;
+}
+.bottom-cloud {
+  position: absolute;
+  bottom: 380px;
+  right: 300px;
+}
+.mountain {
+  position: relative;
+  top: 4px;
+}
+h2 {
+  font-family: "Montserrat", sans-serif;
+  color: #66bfbf;
+}
+h3 {
+  font-family: "Montserrat", sans-serif;
+  color: #11999e;
+}
+.project-cls {
+  margin-left: 4%;
+}
+
+.header {
+  background-color: #66bfbf;
+  height: 3em;
+}
+.profile-pic {
+  border-radius: 100%;
+}
+
+.profile {
+  margin: 5% auto 5% auto;
+}
+
 hr {
   border-style: dotted none none;
   width: 10%;
   border-color: grey;
   border-width: 5px;
+  margin-bottom: 5%;
+}
+p {
+  line-height: 2;
+}
+.skill-row {
+  margin: auto;
+  width: 50%;
+  margin: 100px auto 100px auto;
+  text-align: left;
+  line-height: 2;
+}
+.code-img {
+  width: 25%;
+  float: left;
+  margin-right: 30px;
+}
+.project-img {
+  width: 25%;
+  float: right;
+  margin-left: 30px;
+}
+.bottom-container {
+  background-color: #66bfbf;
+  padding: 2em;
+  margin-top: 100px;
+}
+.contact-me-para {
+  margin-bottom: 80px;
+}
+a {
+  color: #11999e;
+}
+.footer-link {
+  padding: 2em;
+}
+.copyright {
+  color: #eaf6f6;
+  margin-top: 40px;
+  font-size: 12px;
 }
 
-h1 {
-  color: #66bfbf;
+/* Copied code for button */
+.butn {
+  background: #00bdd6;
+  background-image: -webkit-linear-gradient(top, #00bdd6, #5b849c);
+  background-image: -moz-linear-gradient(top, #00bdd6, #5b849c);
+  background-image: -ms-linear-gradient(top, #00bdd6, #5b849c);
+  background-image: -o-linear-gradient(top, #00bdd6, #5b849c);
+  background-image: linear-gradient(to bottom, #00bdd6, #5b849c);
+  -webkit-border-radius: 7;
+  -moz-border-radius: 7;
+  border-radius: 7px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 24px;
+  padding: 7px 14px 7px 14px;
+  text-decoration: none;
 }
 
-h3 {
-  color: #2f89fc;
-}
-
-a:hover {
-  color: blueviolet;
-}
-
-/************************ CLASS SELECTORS ***********************/
-
-/************************ ID SELECTORS ************************/
-#profile-pic {
-  border-radius: 100%;
-}
-
-#contact-me {
-  color: #df4d19;
+.butn:hover {
+  background: #3cb0fd;
+  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
 }
